# mrtdreader

./: CMakeLists.txt  ChangeLog  README.md  config.h.in  mrtd.pc.in  mrtdreader_0.1.0.orig.tar.gz.delta  mrtdreader_0.1.0.orig.tar.gz.id  mrtdreader_0.1.1.orig.tar.gz.delta  mrtdreader_0.1.1.orig.tar.gz.id  mrtdreader_0.1.2.orig.tar.gz.delta  mrtdreader_0.1.2.orig.tar.gz.id  mrtdreader_0.1.3.orig.tar.gz.delta  mrtdreader_0.1.3.orig.tar.gz.id  mrtdreader_0.1.4.orig.tar.gz.delta  mrtdreader_0.1.4.orig.tar.gz.id  mrtdreader_0.1.5.orig.tar.gz.delta  mrtdreader_0.1.5.orig.tar.gz.id  mrtdreader_0.1.6.orig.tar.gz.delta  mrtdreader_0.1.6.orig.tar.gz.id
debian/: changelog  control  copyright  libmrtd-dev.install  libmrtd0.symbols  mrtdreader.1  mrtdreader.manpages  rules  shlibs  watch
debian/patches/: 01_fix_regression.patch  series
debian/upstream/: signing-key.asc
include/: CMakeLists.txt  mrtd.h
src/: CMakeLists.txt  bac.c  bac.h  bachelper.c  bachelper.h  crypto-gcrypt.c  crypto-openssl.c  crypto-tomcrypt.c  crypto.h  fileread.c  fileread.h  hardware.c  mrtd.h  mrtdreader.c
test/: CMakeLists.txt  test1.c
